# mllif-project

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  publish.sh
.github/workflows/: doxygen.yml
cmake/: Polyglat.cmake  UseLLVM.cmake  UseMLLIC.cmake  UseMLLIF.cmake
docs/: Create-Cxx-Wrapper-From-Symbols.md  Extract-Symbols-From-Cxx.md  README.md
mllif/: CMakeLists.txt
mllif/Backend/C#/: CMakeLists.txt
mllif/Backend/C#/include/mllif/Backend/C#/: CsBridgeGen.h  CsWrapperGen.h  Type.h
mllif/Backend/C#/lib/: CsBridgeGen.cxx  CsWrapperGen.cxx  Type.cxx  main.cxx  pch.h
mllif/Backend/C#/test/create-cs-bridge/: .gitignore  CMakeLists.txt  test.csproj
mllif/Backend/C++/: CMakeLists.txt
mllif/Backend/C++/include/mllif/Backend/C++/: CxxBridgeGen.h  CxxDeclGen.h  CxxWrapperGen.h  Type.h
mllif/Backend/C++/lib/: CxxBridgeGen.cxx  CxxDeclGen.cxx  CxxWrapperGen.cxx  Type.cxx  main.cxx  pch.h
mllif/Backend/C++/test/create-cxx-bridge/: CMakeLists.txt
mllif/Backend/C++/test/create-cxx-wrapper/: .gitignore  CMakeLists.txt
mllif/Backend/Shared/: CMakeLists.txt
mllif/Backend/Shared/include/mllif/Backend/: BridgeGen.h  Context.h  Decl.h  Stdin.h  WrapperGen.h
mllif/Backend/Shared/lib/: BridgeGen.cxx  Context.cxx  Decl.cxx  Stdin.cxx  WrapperGen.cxx  pch.h
mllif/C/: CMakeLists.txt
mllif/C/lib/: ExportAttr.cxx
mllif/C/src/: attribute.cxx
mllif/C/test/: CMakeLists.txt  test.sh
mllif/C/test/use-c/: CMakeLists.txt
mllif/Frontend/C/: CMakeLists.txt
mllif/Frontend/C#/: CMakeLists.txt  MLLIFCSharpFront.sln
mllif/Frontend/C#/lib/: BindGenerator.cs  MLLIFCSharpFront.csproj
mllif/Frontend/C#/lib/MLLIFCSharpFront/: BindGenerator.cs  SymbolExtension.cs
mllif/Frontend/C#/lib/MLLIFCSharpFront/Properties/: launchSettings.json
mllif/Frontend/C#/lib/MLLIFCSharpFrontBuild/: Embedded.cs  HeaderGenerator.cs  IGenerator.cs  MLLIFCSharpFrontBuild.csproj  Program.cs  SourceGenerator.cs  ZipExtension.cs
mllif/Frontend/C#/lib/MLLIFCSharpFrontBuild/Diagnostics/: BindingDiagnostic.cs  DiagnosticExtension.cs  DocumentExtension.cs
mllif/Frontend/C#/lib/MLLIFCSharpFrontBuild/Resources/: BridgeStub.cxx  BridgeStub.h  CMakeLists.txt
mllif/Frontend/C#/lib/MLLIFCSharpFrontBuild/Serialization/: CodeContext.cs  CodeWriter.cs  ICodeWriter.cs  MethodDeclWriter.cs  MethodDefWriter.cs  NamespaceWriter.cs  TypeDeclWriter.cs  TypeDefWriter.cs  TypeWriter.cs
mllif/Frontend/C#/lib/Properties/: launchSettings.json
mllif/Frontend/C#/test/: .gitignore  MLLIFCSharpFrontTest.csproj  Program.cs
mllif/Frontend/C#/test/Test/: CMakeLists.txt  main.cxx
mllif/Frontend/C/include/mllif/Frontend/C/: ExportAttr.h
mllif/Frontend/C/lib/: ExportAttr.cxx  pch.h
mllif/Frontend/C/test/use-c/: test.sh
mllif/Frontend/MLIR/: CMakeLists.txt
mllif/Frontend/MLIR/include/mllif/Frontend/MLIR/: Adapter.h  Dialects.inc  Tree.h  Type.h  TypeReg.h  Types.inc
mllif/Frontend/MLIR/include/mllif/Frontend/MLIR/Builtin/: BuiltinType.h
mllif/Frontend/MLIR/include/mllif/Frontend/MLIR/CIR/: CIRAdapter.h  CIRType.h
mllif/Frontend/MLIR/lib/: Adapter.cxx  Tree.cxx  Type.cxx  main.cxx  pch.h  symboltree.cxx
mllif/Frontend/MLIR/lib/Builtin/: BuiltinType.cxx
mllif/Frontend/MLIR/lib/CIR/: CIRAdapter.cxx  CIRType.cxx
mllif/Frontend/MLIR/test/use-mlir/: CMakeLists.txt  foo.cxx
mllif/Frontend/Shared/: CMakeLists.txt
mllif/Frontend/Shared/include/mllif/Frontend/: annotation.h
mllif/Frontend/Shared/lib/: annotation.cxx  pch.h
mllif/MLIR/: CMakeLists.txt  pch.h
mllif/MLIR/include/mllif/MLIR/: symboltree.h
mllif/MLIR/lib/: main.cxx
mllif/MLIR/src/: main.cxx
mllif/Shared/: CMakeLists.txt  pch.h
mllif/Shared/lib/: annotation.cxx
mllif/Shared/src/: annotation.cxx
mllif/Test/: CMakeLists.txt
mllif/include/mllif/C/: ExportAttr.h
mllif/lib/C/: CMakeLists.txt  attribute.cxx
mllif/lib/MLIR/: CMakeLists.txt  symboltree.cxx
mllif/lib/Shared/: CMakeLists.txt
mllif/test/use-c/: main.cxx
mllif/test/use-mlir/: CMakeLists.txt  foo.cxx
src/: CMakeLists.txt
src/lilac-c/: CMakeLists.txt  attribute.h  pch.h
src/lilac-c/src/: attribute.cxx  typeinfo.cxx
src/lilac-c/test/: main.cxx  test.sh
src/lilac-ir/: CMakeLists.txt  annotation.h
src/lilac-ir/src/: annotation.cxx  attribute.cxx  main.cxx
src/lilac-ir/test/: main.cxx  test.sh
src/lilac-shared/: CMakeLists.txt  annotation.h
src/lilac-shared/src/: annotation.cxx
src/mllic-c/: CMakeLists.txt
src/mllic-c/src/: attribute.cxx
src/mllic-c/test/: main.cxx  test.sh
src/mllic-shared/: CMakeLists.txt  annotation.h
src/mllic-shared/src/: annotation.cxx
src/mllic-test/: CMakeLists.txt
src/mllic-test/src/: foo.cxx
src/polyglat-c/: CMakeLists.txt  annotation-emitter.h  pch.h
src/polyglat-c/src/: annotation-emitter.cxx  attribute.cxx  typeinfo.cxx
src/polyglat-c/test/: main.cxx  test.sh
src/polyglat-ir/: CMakeLists.txt  annotation.h  diagnostics.h  pch.h  type.h
src/polyglat-ir/src/: annotation.cxx  diagnostics.cxx  main.cxx  type.cxx
src/polyglat-ir/test/: .gitignore  main.cxx  test.sh
src/polyglat-shared/: CMakeLists.txt  annotation.h
src/polyglat-shared/src/: annotation.cxx
src/polyglat-test/: CMakeLists.txt
src/polyglat-test/src/: foo.cxx
